Fix gap in info icon coloring

--- a/packages/core/hooks/useOpenWithMenuItems/useOpenWithMenuItems.module.css
+++ b/packages/core/hooks/useOpenWithMenuItems/useOpenWithMenuItems.module.css
@@ -20,7 +20,7 @@
     font-size: 10px;
 }
 
-.desktop-menu-item:hover > div, .desktop-menu-item:hover .info-button {
+.desktop-menu-item:hover > div, .desktop-menu-item:hover .info-button, .desktop-menu-item:hover .info-button i {
     background-color: var(--highlight-background-color);
     color: var(--highlight-text-color);
 }
